tp6_final/strapi/alpine-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alpine
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alpine-app
    spec:
      containers:
      - name: alpine-app
        image: alpine
        command:
          - /bin/ash
        ports:
        - containerPort: 80
