tp6_final/strapi/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-svc
  labels:
    app: strapi-app
spec:
  ports:
  - port: 8080
    targetPort: 1337
    protocol: TCP
    name: http
  selector:
    app: strapi-app
